--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,100&display=swap"        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,100&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/ydd2vxm.css">
 
 </head>
 
@@ -27,7 +29,7 @@
                     <li onclick="closeMenu()"> <a href="#column-block">COLUMN</a></li>
                     <li onclick="closeMenu()"> <a href="/">NEWS</a></li>
                     <li onclick="closeMenu()" class="header-contact"><a href="#footer-block">CONTACT</a></li>
-                    <li> <button onclick="myFunc()" class="button-menu" type="button">QUIT</button></li>
+                    <!-- <li> <button onclick="myFunc()" class="button-menu" type="button">QUIT</button></li> -->
                 </ul>
             </div>
             <div class="header-content">
@@ -67,11 +69,12 @@
                     <div class="content">
                         <div class="about">
                             <div class="about-content-min">
-                                <p>筋肉や脂肪のつきやすさやケガのリスクは、遺伝子の影響を受けています。同じトレーニングをしても同じ結果にならないのは、遺伝子が1筋肉や脂肪のつきやすさやケガのリスクは、遺伝子の影響を受けています。同じトレーニングをしても同じ結果にならないのは、遺伝子が1筋肉や脂肪のつきやすさやケガのリスクは、遺伝子の影響を受けています。同じトレーニングをしても同じ結果にならないのは、遺伝子が
+                                <p>筋肉や脂肪のつきやすさやケガのリスクは、遺伝子の影響を受けています。同じトレーニングをしても同じ結果にならないのは、遺伝子が1筋肉や脂肪のつきやすさやケガのリスクは、遺伝子の影響を受けています。同じトレーニングをしても同じ結果にならないのは、遺伝子が1筋肉や脂肪のつきやすさやケガのリスクは、遺伝
                                 </p>
                                 <div class="about-video">
                                     <div class="about-video-content">
-                                        <img class="play-video" src="assets/image/image-play-video.png" alt="image-play-video">
+                                        <img class="play-video" src="assets/image/image-play-video.png"
+                                            alt="image-play-video">
                                         <div class="text">
                                             <p class="title">
                                                 CHECK MOVIE!
@@ -114,27 +117,27 @@
                                     <hr>
                                 </div>
                                 <p class="title-feature-des-main">スポーツ遺伝子研究を行った <br> 指導者によるフィードバック</p>
-                                <p>スポーツ遺伝子の専門家がフィードバックします。スポーツ遺伝子研究の実践者が丁寧にあなたに説明します。専門家でない業者が多い中スポーツ遺伝子の専門家がフィードバックします。スポーツ遺伝子研究の実践者が丁寧にあなたに説明します。専門家でない業者が多い中、
+                                <p class="title-feature-des-extra">
+                                    スポーツ遺伝子の専門家がフィードバックします。スポーツ遺伝子研究の実践者が丁寧にあなたに説明します。専門家でない業者が多い中スポーツ遺伝子の専門家がフィードバックします。スポーツーツ
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="feature">
+                    <div class="feature feature-mid">
                         <div class="feature-content feature-second">
                             <div class="feature-content-min ">
                                 <div class="number-content">
                                     <span>02</span>
                                     <hr>
                                 </div>
-                                <p class="title-feature-des-main">スポーツ特化型の <br> 分析項目</p>
-                                <p>
-
+                                <p class="title-feature-des-main title-feature-des-second ">スポーツ特化型の <br> 分析項目</p>
+                                <p class="title-second">
                                     勝つことを目的にした遺伝子検査のため、病気になりやすいかは調べません。
                                 </p>
                                 <ul>
                                     <li>瞬発力に優れるか？ </li>
                                     <li>筋肉・脂肪はつきやすいか？ </li>
-                                    <li>筋肉・脂肪はつきやすいか？ 筋肉・脂肪はつき </li>
+                                    <li>筋肉脂肪はつきやすいか？ 筋肉・脂肪はつき脂肪はつ </li>
                                 </ul>
 
                             </div>
@@ -143,7 +146,7 @@
                             <img src="assets/image/feature-2.png" alt="feature">
                         </div>
                     </div>
-                    <div class="feature">
+                    <div class="feature feature-third">
                         <div class="feature-img">
 
                             <img src="assets/image/feature-3.png" alt="feature">
@@ -155,8 +158,9 @@
                                     <hr>
                                 </div>
                                 <p class="title-feature-des-main">徹底的な <br> パフォーマンス向上支援</p>
-                                <p>遺伝子分析から見えた新たな課題に対して、弊社の連携する様々な専門家への紹介も可能です。目的は競技力向上ですから、それにつながる
-                                    目的は競技力向上ですから、それにつながる
+                                <p class="title-third-extra">
+                                    遺伝子分析から見えた新たな課題に対して、弊社の連携する様々な専門家への紹介も可能です。目的は競技力向上ですから、それにつながる
+                                    目的は競技力向上
                                 </p>
                             </div>
                         </div>
@@ -172,34 +176,41 @@
     <section>
         <div class="flow-wrapper">
             <div class="wrapper">
-                <div>
-                    <h1 class="title-main">FLOW</h1>
+                <div class="flow-title">
+                    <h1 class="title-main title-main-flow">FLOW</h1>
                     <p class="des">カウンセリング実施までの流れ</p>
                 </div>
                 <div class="flow-content">
                     <div class="flow-picture">
-                        <p class="flow-number">01</p>
-                        <hr>
-                        <div class="flow-des">
-                            <p>問い合わせもしくはお申し込み</p>
-                            <span>（不明点を解消してから実施したいため）</span>
+                        <div class="picture-position picture-position-first">
+                            <p class="flow-number">01</p>
+                            <hr>
+                            <div class="flow-des">
+                                <p class="title-des">問い合わせもしくはお申し込み</p>
+                                <span>（不明点を解消してから実施したいため）</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flow-picture ">
+                        <div class="picture-position picture-position-second">
+                            <p class="flow-number">02</p>
+                            <hr>
+                            <div class="flow-des">
+                                <p class="title-des">キット郵送し、口の粘膜を採取ご郵送</p>
+                                <!-- <span>（不明点を解消してから実施したいため）</span> -->
+                            </div>
                         </div>
                     </div>
                     <div class="flow-picture">
-                        <p class="flow-number">02</p>
-                        <hr>
-                        <div class="flow-des">
-                            <p>キット郵送し、口の粘膜を採取ご郵送</p>
-                            <!-- <span>（不明点を解消してから実施したいため）</span> -->
+                        <div class="picture-position picture-position-third">
+                            <p class="flow-number">03</p>
+                            <hr>
+                            <div class="flow-des">
+                                <p>結果説明カウンセリング</p>
+                                <span>（1ヶ月後で、あなたに最適な取り組みをご提案）</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="flow-picture">
-                        <p class="flow-number">03</p>
-                        <hr>
-                        <div class="flow-des">
-                            <p>結果説明カウンセリング</p>
-                            <span>（1ヶ月後で、あなたに最適な取り組みをご提案）</span>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -247,67 +258,81 @@
                     <h1 class="title-main">COLUMN</h1>
                     <p class="des">コラム</p>
                 </div>
-                <div class="column-post">
-                    <div class="image-posts">
-                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                
+                <div id="column-post" class="column-post">
+                    <div class="button-slider">
+                        <button type="button" class="itemFirst"></button>
+                        <button type="button" class="itemSecond"></button>
+                        <button type="button" class="itemThird"></button>
+                        <button type="button" class="itemFourth"></button>
+                        <button type="button" class="itemFifth"></button>
+                        <div>
+                            <img src="assets/image/slider.png" alt="slider">
+                        </div>
                     </div>
-                    <div class="image-posts">
-                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                    <div class="image-posts itemFirst">
+                        <p>1タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
-                    <div class="image-posts">
-                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                    <div class="image-posts active-item itemSecond">
+                        <p>2タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
-                    <div class="image-posts">
-                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                    <div class="image-posts itemThird">
+                        <p>3タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
-                    <div class="image-posts">
-                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                    <div class="image-posts itemFourth">
+                        <p>4タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                    </div>
+                    <div class="image-posts itemFifth">
+                        <p>5タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                    </div>
+                    <div class="image-posts itemvisible">
+                        <p>5タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-        <!-- end block column -->
+    <!-- end block column -->
 
-        <!-- start block footer -->
-        <footer>
-            <div class="footer-wrapper" id="footer-block">
-                <div class="wrapper">
-                    <div class="footer-logo">
-                        <div class="wrapper-logo">
-                            <img src="assets/image/logo-footer.png" alt="logo-footer">
-                            <p>Copyright ©  2022 Highclass Inc. All Rights Reserved</p>
-                        </div>
-                    </div>
-                    <div class="footer-contact">
-                        <div class="footer-contact-item">
-                            <a href="/">TOP</a>
-                            <a href="/">
-                                お知らせ
-                            </a>
-                            <a href="/">選手の声</a>
-                        </div>
-                        <div class="footer-contact-item">
-                            <a href="/">コラム </a>
-                            <a href="/">
-                                お問い合わせ
-                            </a>
-                        </div>
-                        <div class="footer-contact-item">
-                            <a href="/">会社概要</a>
-                            <a href="/">
-                                特定商取引
-                            </a>
-                            <a href="/">プライバシーポリシー</a>
-                        </div>
-                        <div>
-                        </div>
-                        <div></div>
+    <!-- start block footer -->
+    <footer>
+        <div class="footer-wrapper" id="footer-block">
+            <div class="wrapper">
+                <div class="footer-logo">
+                    <div class="wrapper-logo">
+                        <img src="assets/image/logo-footer.png" alt="logo-footer">
+                        <p>Copyright © 2022 Highclass Inc. All Rights Reserved</p>
                     </div>
                 </div>
+                <div class="footer-contact">
+                    <div class="footer-contact-item">
+                        <a href="/">TOP</a>
+                        <a href="/">
+                            お知らせ
+                        </a>
+                        <a href="/">選手の声</a>
+                    </div>
+                    <div class="footer-contact-item">
+                        <a href="/">コラム </a>
+                        <a href="/">
+                            お問い合わせ
+                        </a>
+                    </div>
+                    <div class="footer-contact-item">
+                        <a href="/">会社概要</a>
+                        <a href="/">
+                            特定商取引
+                        </a>
+                        <a href="/">プライバシーポリシー</a>
+                    </div>
+                    <div>
+                    </div>
+                    <div></div>
+                </div>
             </div>
-        </footer>
-        <script src="assets/js/app.js"> </script>
+        </div>
+    </footer>
+    <script src="assets/js/app.js"> </script>
 </body>
 
 </html>
