--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                                 大学大学院で取得。国内外の学会受賞経験がスポーツ分野で遺伝子研究を始め、博士号(スポーツ健康科学)を順天堂
                                 大学大学院で取得。国内外の学会受賞経験がスポーツ分野で遺伝子研究を始め、博士号(スポーツ健康科学)を順天堂
                                 大学大学院で取得。国内外の学会受賞経験がスポーツ分野で遺伝子研究を始め、博士号(スポーツ健康科学)を順天堂
-                                大学大学院で取得。国内外の学会受賞経験がスポーツ分野で遺伝子研究を始め</p>
+                                大学大学院で取得。</p>
                             <a href="https://itakatoshio.com/profile/">https://itakatoshio.com/profile/</a>
                         </div>
                     </div>
@@ -261,32 +261,37 @@
                 
                 <div id="column-post" class="column-post">
                     <div class="button-slider">
-                        <button type="button" class="itemFirst"></button>
-                        <button type="button" class="itemSecond"></button>
-                        <button type="button" class="itemThird"></button>
-                        <button type="button" class="itemFourth"></button>
-                        <button type="button" class="itemFifth"></button>
+                        <button type="button"></button>
+                        <button class="activeButton" type="button"></button>
+                        <button type="button"></button>
+                        <button type="button"></button>
+                        <button type="button"></button>
                         <div>
                             <img src="assets/image/slider.png" alt="slider">
                         </div>
                     </div>
+                    <div class="image-posts itemvisible">
+                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                    </div>
                     <div class="image-posts itemFirst">
-                        <p>1タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
                     <div class="image-posts active-item itemSecond">
-                        <p>2タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                        <p class="des-slider">トレーニング</p>
+                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
                     <div class="image-posts itemThird">
-                        <p>3タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                        <p class="des-slider des-second">タグテキスト</p>
+                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
                     <div class="image-posts itemFourth">
-                        <p>4タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
                     <div class="image-posts itemFifth">
-                        <p>5タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
                     <div class="image-posts itemvisible">
-                        <p>5タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
+                        <p>タイトルタイトルタイトルタイトル <br> タ イ トルタイトルタイトルタイトルタイトルタイトルタ</p>
                     </div>
                 </div>
             </div>
@@ -305,25 +310,25 @@
                     </div>
                 </div>
                 <div class="footer-contact">
-                    <div class="footer-contact-item">
+                    <div class="footer-contact-item first-contact">
                         <a href="/">TOP</a>
                         <a href="/">
                             お知らせ
                         </a>
-                        <a href="/">選手の声</a>
+                        <a class="item-contact" href="/">選手の声</a>
                     </div>
-                    <div class="footer-contact-item">
-                        <a href="/">コラム </a>
-                        <a href="/">
+                    <div class="footer-contact-item second-contact">
+                        <a class="item-contact" href="/">コラム </a>
+                        <a class="item-contact" href="/">
                             お問い合わせ
                         </a>
                     </div>
-                    <div class="footer-contact-item">
-                        <a href="/">会社概要</a>
-                        <a href="/">
+                    <div class="footer-contact-item third-contact">
+                        <a class="item-contact" href="/">会社概要</a>
+                        <a class="item-contact" href="/">
                             特定商取引
                         </a>
-                        <a href="/">プライバシーポリシー</a>
+                        <a class="item-contact" href="/">プライバシーポリシー</a>
                     </div>
                     <div>
                     </div>
