--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="content">
                         <div class="about">
                             <div class="about-content-min">
-                                <p>筋肉や脂肪のつきやすさやケガのリスクは、遺伝子の影響を受けています。同じトレーニングをしても同じ結果にならないのは、遺伝子が1筋肉や脂肪のつきやすさやケガのリスクは、遺伝子の影響を受けています。同じトレーニングをしても同じ結果にならないのは、遺伝子が1筋肉や脂肪のつきやすさやケガのリスクは、遺伝
+                                <p>筋肉や脂肪のつきやすさやケガのリスクは、遺伝子の影響を受けています。同じトレーニングをしても同じ結果にならないのは、遺伝子が1筋肉や脂肪のつきやすさやケガのリスクは、遺伝子の影響を受けています。同じトレーニングをしても同じ結果にならないのは、
                                 </p>
                                 <div class="about-video">
                                     <div class="about-video-content">
@@ -118,7 +118,7 @@
                                 </div>
                                 <p class="title-feature-des-main">スポーツ遺伝子研究を行った <br> 指導者によるフィードバック</p>
                                 <p class="title-feature-des-extra">
-                                    スポーツ遺伝子の専門家がフィードバックします。スポーツ遺伝子研究の実践者が丁寧にあなたに説明します。専門家でない業者が多い中スポーツ遺伝子の専門家がフィードバックします。スポーツーツ
+                                    スポーツ遺伝子の専門家がフィードバックします。スポーツ遺伝子研究の実践者が丁寧にあなたに説明します。専門家でない業者が多い中スポーツ遺伝子の専門家がフィードバックします。スポー
                                 </p>
                             </div>
                         </div>
